--- a/style.css
+++ b/style.css
@@ -1,11 +1,74 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 #videos{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 2em;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .video-player{
     background-color: black;
     width: 100%;
-    height: 400px;
+    height: 100%;
+}
+#user-2 {
+    display: none;
+}
+
+.smallFrame {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    height: 170px;
+    width: 300px;
+    border-radius: 5px;
+    border:2px solid #b3f6ff
+}
+
+#controls {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform:translateX(-50%);
+    display: flex;
+    gap: 1em;
+
+}
+
+.control_container {
+    background-color: rgb(179, 102, 249,.9);
+    padding: 20px;
+    display: flex;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.control_container img {
+    height: 30px;
+    width: 30px;
+}
+#leave-btn {
+    background-color: rgb(255, 80, 80,1);
+}
+
+@media screen and (max-width:600px) {
+    .smallFrame{
+        height: 80px;
+        width: 120px;
+    }
+
+    .control_container{
+        height: 20px;
+        width: 20px;
+        
+    }
+    
 }
